# docs/swagger.json
@@ -17,6 +17,40 @@
     "host": "localhost:8000",
     "basePath": "/directory/api/v1",
     "paths": {
+        "/active-status": {
+            "post": {
+                "description": "Setting the Status for an  Organisation Operation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "organisation"
+                ],
+                "summary": "Setting the Status for an  Organisation",
+                "parameters": [
+                    {
+                        "description": "activate or deactivate",
+                        "name": "default",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.OrganStatus"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utility.ResponseObj"
+                        }
+                    }
+                }
+            }
+        },
         "/branch": {
             "post": {
                 "description": "add by json Branch",
@@ -51,7 +85,32 @@
                 }
             }
         },
-        "/branch/{organisationId}": {
+        "/branch/{branchId}": {
+            "get": {
+                "description": "Get a single branch",
+                "tags": [
+                    "branch"
+                ],
+                "summary": "Get branch",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "branchId",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Organisation"
+                        }
+                    }
+                }
+            }
+        },
+        "/branches/{organisationId}": {
             "get": {
                 "description": "Get the list of branches with pagination",
                 "tags": [
@@ -76,47 +135,16 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Branch"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Branch"
+                            }
                         }
                     }
                 }
             }
         },
-        "/de_activate_organisation/": {
-            "post": {
-                "description": "Deactivate or Activate Organisation Operation",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "organisation"
-                ],
-                "summary": "Deactivate or Activate Organisation",
-                "parameters": [
-                    {
-                        "description": "activate or deactivate",
-                        "name": "default",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.DeReactivateOrgReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ResponseObj"
-                        }
-                    }
-                }
-            }
-        },
-        "/get_organisation": {
+        "/get-organisations": {
             "get": {
                 "description": "Get the list of organisation with pagination",
                 "tags": [
@@ -135,7 +163,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Organisation"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Organisation"
+                            }
                         }
                     }
                 }
@@ -170,6 +201,31 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/utility.ResponseObj"
+                        }
+                    }
+                }
+            }
+        },
+        "/organisation/{organisationId}": {
+            "get": {
+                "description": "Get a single organisation",
+                "tags": [
+                    "organisation"
+                ],
+                "summary": "Get organisation",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "organisationId",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Organisation"
                         }
                     }
                 }
@@ -221,7 +277,7 @@
                 }
             }
         },
-        "dto.DeReactivateOrgReq": {
+        "dto.OrganStatus": {
             "type": "object",
             "properties": {
                 "active": {
