# dto/organization.go
@@ -1,24 +1,17 @@
 package dto
 
 import (
+	
 	"github.com/TechBuilder-360/business-directory-backend/models"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-
-
-
-
-
 type CreateBranch struct {
-	
-	OrganisationID string   `json:"organisation_id" validate:"required"`
-	BranchName     string      `json:"branch_name" validate:"required"`
-	Contact        models.Contact     `json:"contact" `
-	Address        models.Address     `json:"address"`
+	OrganisationID string         `json:"organisation_id" validate:"required"`
+	BranchName     string         `json:"branch_name" validate:"required"`
+	Contact        models.Contact `json:"contact" `
+	Address        models.Address `json:"address"`
 }
-
-
 
 type Contact struct {
 	Email        string         `json:"email" validate:"required"`
@@ -44,13 +37,13 @@ type Address struct {
 	City        string `json:"city"`
 	State       string `json:"state"`
 }
+
 // CreateOrgReq ...
 type CreateOrgReq struct {
 	OrganisationName string `json:"organisation_name" validate:"required"`
 	OrganisationSize string `json:"organisation_size" validate:"required"`
 	Description      string `json:"description" validate:"required"`
 	FoundingDate     string `json:"founding_date" validate:"required"`
-	
 }
 
 // CreateOrgResponse ...
@@ -58,17 +51,17 @@ type CreateOrgResponse struct {
 	OrganisationID string `json:"organisation_id"`
 }
 
-type DeReactivateOrgReq struct {
-	
-	OrganisationID  string   `json:"organisation_id"`
-	Active bool `json:"active" `
+type OrganStatus struct {
+	OrganisationID string `json:"organisation_id"`
+	Active         bool   `json:"active" `
 }
 
 type DataView struct {
-	Page int `json:"page"`
-	Perpage int64 `json:"perpage"`
-	Total int64 `json:"total"`
-	LastPage float64 `json:"last_page"`
-	Data []primitive.M `json:"data"`
+	Page     int           `json:"page"`
+	Perpage  int64         `json:"perpage"`
+	Total    int64         `json:"total"`
+	LastPage float64       `json:"last_page"`
+	Data     []primitive.M `json:"data"` 
 }
+
 
